fix crash of background location

--- a/Ride-Share FR/Info.plist
+++ b/Ride-Share FR/Info.plist
@@ -28,5 +28,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
